--- a/api/package.json
+++ b/api/package.json
@@ -8,12 +8,16 @@
     "start:dev": "nest start --watch",
     "build": "nest build",
     "lint": "eslint . --ext .ts",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+     "prisma:generate": "prisma generate",
+    "prisma:migrate:dev": "prisma migrate dev",
+    "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
     "@nestjs/common": "^10.2.5",
     "@nestjs/core": "^10.2.5",
     "@nestjs/platform-express": "^10.2.5",
+    "@prisma/client": "^5.17.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
@@ -23,6 +27,8 @@
     "@nestjs/testing": "^10.2.5",
     "@types/express": "^4.17.21",
     "@types/node": "^18.17.3",
+    "prisma": "^5.17.0",
+    "ts-node": "^10.9.2",
     "eslint": "^8.47.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
@@ -30,4 +36,7 @@
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   }
+"prisma": {
+  "schema": "prisma/schema.prisma"
+}
 }
