--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -1,11 +1,9 @@
 {
   "compilerOptions": {
-    "target": "ES2022",
-    "module": "ES2022",
-    "moduleResolution": "node",
-    "outDir": "dist",
     "rootDir": "src",
-    "esModuleInterop": true,
-    "strict": true
-  }
+    "outDir": "dist"
+    // остальные опции оставь как есть
+  },
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules", "dist", "prisma/**/*", "test/**/*", "**/*.spec.ts"]
 }
