--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,15 +1,26 @@
 {
-  "name": "afterlight-api",
-  "private": true,
-  "type": "module",
-  "version": "0.1.0",
   "scripts": {
-    "start": "node dist/main.js",
-    "start:dev": "node --watch dist/main.js",
-    "build": "tsc -p tsconfig.json"
+    "start": "nest start",
+    "start:dev": "nest start --watch",
+    "build": "nest build",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate:dev": "prisma migrate dev",
+    "seed": "ts-node prisma/seed.ts"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@nestjs/common": "^10.0.0",
+    "@nestjs/core": "^10.0.0",
+    "@nestjs/platform-express": "^10.0.0",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.1",
+    "@prisma/client": "^5.17.0"
+  },
   "devDependencies": {
-    "typescript": "^5.4.0"
+    "@nestjs/cli": "^10.0.0",
+    "@nestjs/schematics": "^10.0.0",
+    "@nestjs/testing": "^10.0.0",
+    "prisma": "^5.17.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.3"
   }
 }
