--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,8 +13,10 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: '20'   # <-- без cache
+          node-version: '20'
       - name: Install deps
         run: npm ci || npm i
-      - name: Build
-        run: npx tsc -p tsconfig.json
+      - name: Generate Prisma client
+        run: npx prisma generate
+      - name: Build (Nest)
+        run: npm run build
