--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -13,7 +13,11 @@
     "@nestjs/platform-express": "^10.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "@prisma/client": "^5.17.0"
+    "@prisma/client": "^5.17.0",
+      "@nestjs/swagger": "^7.4.2",
+  "swagger-ui-express": "^5.0.1",
+  "class-validator": "^0.14.1",
+  "class-transformer": "^0.5.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -21,6 +25,7 @@
     "@nestjs/testing": "^10.0.0",
     "prisma": "^5.17.0",
     "ts-node": "^10.9.2",
+    "@types/express": "^4.17.21",
     "typescript": "^5.5.3"
   }
 }
