--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -2,9 +2,16 @@
 FROM node:20-alpine AS build
 WORKDIR /app
 RUN apk add --no-cache python3 make g++
-COPY package.json package-lock.json ./
-COPY apps ./apps
-RUN npm ci
+
+# Копируем МАНИФЕСТЫ ИМЕННО ИЗ apps/api
+COPY apps/api/package.json apps/api/package-lock.json ./apps/api/
+# Ставим зависимости только для API
+RUN cd apps/api && npm ci
+
+# Копируем исходники API
+COPY apps/api ./apps/api
+
+# Генерация Prisma и сборка
 WORKDIR /app/apps/api
 RUN npx prisma generate
 RUN npm run build
@@ -13,9 +20,12 @@ RUN npm run build
 FROM node:20-alpine AS runtime
 ENV NODE_ENV=production
 WORKDIR /app
-COPY --from=build /app/node_modules ./node_modules
+
+# Копируем только то, что нужно для запуска API
+COPY --from=build /app/apps/api/node_modules ./apps/api/node_modules
 COPY --from=build /app/apps/api/dist ./apps/api/dist
 COPY --from=build /app/apps/api/prisma ./apps/api/prisma
+
 ENV PORT=3000
 EXPOSE 3000
 CMD ["node", "apps/api/dist/main.js"]
