--- a/.github/workflows/docker-api.yml
+++ b/.github/workflows/docker-api.yml
@@ -1,24 +1,37 @@
-# .github/workflows/docker.yml
 name: Build & Push
+
 on:
-  push: { branches: [ main ] }
+  push:
+    branches: [ main ]
   workflow_dispatch: {}
+
 jobs:
   build:
     runs-on: ubuntu-latest
-    permissions: { contents: read, packages: write }
+    permissions:
+      contents: read
+      packages: write
     steps:
       - uses: actions/checkout@v4
+
       - uses: docker/setup-buildx-action@v3
+
       - uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - uses: docker/build-push-action@v6
+
+      - name: Build & Push
+        uses: docker/build-push-action@v6
         with:
           context: .
+          file: Dockerfile.api        # <— ВАЖНО: указываем имя файла
           push: true
           tags: |
             ghcr.io/grayhex/afterlight-api:latest
             ghcr.io/grayhex/afterlight-api:main
+          # (опционально) кэш
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
