--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -39,7 +39,9 @@ ENV NODE_ENV=production
 WORKDIR /app/apps/api
 
 # Акуратное завершение в k8s (опционально)
-RUN apt-get update && apt-get install -y --no-install-recommends tini && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    tini libssl3 ca-certificates && \
+    rm -rf /var/lib/apt/lists/*
 
 # Кладём только нужное
 COPY --from=build /app/apps/api/node_modules ./node_modules
