--- a/Dockerfile.web
+++ b/Dockerfile.web
@@ -11,6 +11,13 @@ COPY apps/web ./
 # Adjust the build script if your web app uses a different command
 RUN npm run build
 
+# Normalize build output to a single folder (web-out)
+# Supports common SPA outputs:
+# - Vite / most:   dist/
+# - CRA (React):   build/
+# - Nuxt/Nitro:    .output/public/
+RUN set -eux;     mkdir -p /app/apps/web/web-out;     if [ -d "dist" ]; then       cp -a dist/. web-out/;     elif [ -d "build" ]; then       cp -a build/. web-out/;     elif [ -d ".output/public" ]; then       cp -a .output/public/. web-out/;     else       echo "No build output found (expected dist/ or build/ or .output/public)";       ls -la;       exit 1;     fi
+
 # Runtime stage (Nginx serves static SPA)
 FROM nginx:alpine AS runner
 
@@ -18,9 +25,8 @@ FROM nginx:alpine AS runner
 RUN rm -f /etc/nginx/conf.d/default.conf
 COPY apps/web/deploy/nginx.conf /etc/nginx/conf.d/default.conf
 
-# Copy built assets (Vite/CRA usually output to dist or build)
-# If your tool outputs to 'build', change the path below accordingly.
-COPY --from=build /app/apps/web/dist /usr/share/nginx/html
+# Copy normalized build artifacts
+COPY --from=build /app/apps/web/web-out /usr/share/nginx/html
 
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
