--- a/k8s/deploy-web-ssr.yaml
+++ b/k8s/deploy-web-ssr.yaml
@@ -17,14 +17,19 @@ spec:
       - name: web
         image: ghcr.io/grayhex/afterlight-web:latest
         imagePullPolicy: Always
-        ports: [ { containerPort: 80 } ]
+        env:
+        - name: PORT
+          value: "3000"
+        - name: NEXT_PUBLIC_API_BASE_URL
+          value: "https://api.afterl.ru"
+        ports: [ { containerPort: 3000 } ]
         readinessProbe:
-          httpGet: { path: /, port: 80 }
+          httpGet: { path: /, port: 3000 }
           periodSeconds: 10
           failureThreshold: 6
         livenessProbe:
-          httpGet: { path: /healthz, port: 80 }
-          initialDelaySeconds: 15
+          httpGet: { path: /, port: 3000 }
+          initialDelaySeconds: 20
           periodSeconds: 20
 ---
 apiVersion: v1
@@ -38,7 +43,7 @@ spec:
   ports:
   - name: http
     port: 80
-    targetPort: 80
+    targetPort: 3000
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
