--- a/Dockerfile.next
+++ b/Dockerfile.next
@@ -1,22 +1,26 @@
-# Next.js SSR runtime (Node 20)
+# deps
 FROM node:20-slim AS deps
 WORKDIR /app/apps/web
 COPY apps/web/package*.json ./
 RUN npm ci || npm install
 
+# build
 FROM node:20-slim AS build
 WORKDIR /app/apps/web
 COPY --from=deps /app/apps/web/node_modules ./node_modules
 COPY apps/web ./
 RUN npm run build
+# убрать dev-зависимости
 RUN npm prune --omit=dev
 
+# runtime
 FROM node:20-slim AS runner
 ENV NODE_ENV=production
 WORKDIR /app/apps/web
+# скопируем всё приложение вместе с .next и node_modules (pruned)
 COPY --from=build /app/apps/web ./
 ENV HOST=0.0.0.0
 ENV PORT=3000
 EXPOSE 3000
-# Adapt if you use pnpm/yarn or a different start script
-CMD ["npm","run","start","--","-p","3000","-H","0.0.0.0"]
+# запускаем Next напрямую, без лишних флагов от npm
+CMD ["node","node_modules/next/dist/bin/next","start","-p","3000","-H","0.0.0.0"]
