--- a/k8s/base/web-configmap.yaml
+++ b/k8s/base/web-configmap.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: web-config
-  namespace: afterlight-staging
+  name: afterlight-web-config
+  namespace: afterlight
 data:
   NODE_ENV: "production"
   PORT: "3000"
