--- a/k8s/base/web-ingress.yaml
+++ b/k8s/base/web-ingress.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: afterlight-web
-  namespace: afterlight-staging
+  namespace: afterlight
   annotations:
     kubernetes.io/ingress.class: traefik
 spec:
