--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,30 +1,22 @@
 {
-  "name": "afterlight-web",
-  "version": "0.1.0",
+  "name": "@afterlight/web",
   "private": true,
+  "version": "0.0.1",
   "scripts": {
-    "dev": "next dev -p 3001",
+    "dev": "next dev -p 3000",
     "build": "next build",
-    "start": "next start -p 3001",
-    "lint": "next lint"
+    "start": "next start -p 3000",
+    "lint": "next lint --no-error-on-unmatched-pattern"
   },
   "dependencies": {
     "next": "14.2.5",
     "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "clsx": "2.1.1",
-    "framer-motion": "11.2.10",
-    "lucide-react": "0.446.0"
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
-    "autoprefixer": "10.4.19",
-    "postcss": "8.4.41",
-    "tailwindcss": "3.4.10",
-    "typescript": "5.5.4",
-    "@types/node": "20.14.12",
-    "@types/react": "18.3.4",
-    "@types/react-dom": "18.3.0",
-    "eslint": "8.57.0",
-    "eslint-config-next": "14.2.5"
+    "typescript": "^5.5.4",
+    "@types/node": "^20.14.10",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0"
   }
 }
