afterlight-unified-web-v1.zip

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,16 +1,5 @@
-.git
-.github
-node_modules
 **/node_modules
-dist
-coverage
-Dockerfile*
+**/.next/cache
+**/.git
+**/.github
 **/*.log
-*.local
-.env
-.env.*
-*.zip
-*.tar.gz
-.idea
-.vscode
-**/.DS_Store
