--- a/Dockerfile.web
+++ b/Dockerfile.web
@@ -1,31 +1,34 @@
-# ---- build ----
+# ---------- deps & build ----------
 FROM node:20-alpine AS build
 WORKDIR /app
 RUN apk add --no-cache python3 make g++ && corepack enable
 
-# копируем только фронт
+# copy only web app to reduce context
 COPY apps/web ./apps/web
 WORKDIR /app/apps/web
 
-# гарантируем, что public существует, даже если его нет в репо
+# ensure public exists even if empty in repo
 RUN mkdir -p public
 
-# ставим зависимости и собираем
-RUN if [ -f pnpm-lock.yaml ]; then corepack prepare pnpm@9 --activate && pnpm i --frozen-lockfile; \
-    elif [ -f yarn.lock ]; then corepack prepare yarn@4 --activate && yarn install --immutable; \
-    elif [ -f package-lock.json ]; then npm ci; else npm i; fi
+# install deps (don't require lock file)
+RUN npm i --no-fund --no-audit
 
+# build Next (standalone output is set in next.config.mjs)
+ENV NEXT_TELEMETRY_DISABLED=1
 RUN npm run build
 
-# ---- runtime ----
+# ---------- runtime ----------
 FROM node:20-alpine AS runtime
 ENV NODE_ENV=production
 ENV PORT=3000
 ENV HOSTNAME=0.0.0.0
-WORKDIR /app/apps/web
+WORKDIR /app
 
-# переносим всё, что нужно для next start (включая пустую public)
-COPY --from=build /app/apps/web ./
+# copy standalone server bundle
+COPY --from=build /app/apps/web/.next/standalone ./
+# static assets & public
+COPY --from=build /app/apps/web/.next/static ./.next/static
+COPY --from=build /app/apps/web/public ./public
 
 EXPOSE 3000
-CMD ["node", "node_modules/next/dist/bin/next", "start", "-p", "3000"]
+CMD ["node", "server.js"]
