--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -17,10 +17,17 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "incremental": true
+    "incremental": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": [
+        "src/*"
+      ]
+    }
   },
   "include": [
     "next-env.d.ts",
+    "src/**/*",
     "**/*.ts",
     "**/*.tsx"
   ],
