--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -60,7 +60,7 @@ jobs:
 
   deploy:
     name: deploy-to-k3s
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     needs: build
     steps:
       - name: Write kubeconfig from secret
