--- a/k8s/base/web-deployment.yaml
+++ b/k8s/base/web-deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: afterlight-web
-  namespace: afterlight
+  namespace: afterlight-staging
 spec:
   replicas: 1
   selector:
