ci: specify linux label for self-hosted deploy runner

--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -60,7 +60,7 @@ jobs:
 
   deploy:
     name: deploy-to-k3s
-    runs-on: self-hosted
+    runs-on: [self-hosted, linux]  # или добавить собственные метки раннера
     needs: build
     steps:
       - name: Write kubeconfig from secret
