--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -60,10 +60,10 @@ jobs:
 
   deploy:
     name: deploy-to-k3s
-    runs-on: [self-hosted, linux, X64]  # или добавить собственные метки раннера
+    runs-on: self-hosted  # или добавить собственные метки раннера
     needs: build
     env:
-      NS: afterlight-staging
+      NS: afterlight
     steps:
       - name: Write kubeconfig from secret
         run: |
