--- a/k8s/deploy-web-ssr.yaml
+++ b/k8s/deploy-web-ssr.yaml
@@ -7,6 +7,12 @@ metadata:
 spec:
   replicas: 1
   revisionHistoryLimit: 2
+  progressDeadlineSeconds: 300
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 0
+      maxSurge: 1
   selector:
     matchLabels: { app: afterlight-web }
   template:
@@ -22,13 +28,18 @@ spec:
           value: "3000"
         - name: NEXT_PUBLIC_API_BASE_URL
           value: "https://api.afterl.ru"
-        ports: [ { containerPort: 3000 } ]
+        ports:
+        - containerPort: 3000
+        startupProbe:
+          tcpSocket: { port: 3000 }
+          periodSeconds: 10
+          failureThreshold: 30
         readinessProbe:
-          httpGet: { path: /, port: 3000 }
+          tcpSocket: { port: 3000 }
           periodSeconds: 10
           failureThreshold: 6
         livenessProbe:
-          httpGet: { path: /, port: 3000 }
+          tcpSocket: { port: 3000 }
           initialDelaySeconds: 20
           periodSeconds: 20
 ---
