--- a/k8s/base/web-deployment.yaml
+++ b/k8s/base/web-deployment.yaml
@@ -17,6 +17,7 @@ spec:
         - name: web
           image: ghcr.io/grayhex/afterlight-web:latest
           imagePullPolicy: Always
+          command: ["node", "server.js"]
           envFrom:
             - configMapRef:
                 name: afterlight-web-config
