--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -5,7 +5,8 @@
     "build": "nest build",
     "prisma:generate": "prisma generate",
     "prisma:migrate:dev": "prisma migrate dev",
-    "seed": "ts-node prisma/seed.ts"
+    "seed": "ts-node prisma/seed.ts",
+    "test": "jest"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
@@ -26,6 +27,9 @@
     "prisma": "^5.17.0",
     "ts-node": "^10.9.2",
     "@types/express": "^4.17.21",
-    "typescript": "^5.5.3"
+    "typescript": "^5.5.3",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
+    "@types/jest": "^29.5.5"
   }
 }
