--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "framer-motion": "^12.23.12",
+    "lucide-react": "^0.539.0",
     "next": "14.2.5",
     "react": "18.3.1",
     "react-dom": "18.3.1"
