--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -8,6 +8,9 @@
     "seed": "ts-node prisma/seed.ts",
     "test": "jest"
   },
+  "prisma": {
+    "seed": "node dist/prisma/seed.js"
+  },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
