--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -18,6 +18,6 @@
     "skipLibCheck": true,
     "types": ["node"]
   },
-  "include": ["src/**/*.ts"],
-  "exclude": ["node_modules", "dist", "prisma/**/*", "test/**/*", "**/*.spec.ts"]
+  "include": ["src/**/*.ts", "prisma/**/*.ts"],
+  "exclude": ["node_modules", "dist", "test/**/*", "**/*.spec.ts"]
 }
