feat(k8s): always pull api image

--- a/k8s/base/api-deployment.yaml
+++ b/k8s/base/api-deployment.yaml
@@ -14,7 +14,7 @@ spec:
       containers:
         - name: api
           image: ghcr.io/grayhex/afterlight-api:latest
-          imagePullPolicy: IfNotPresent
+          imagePullPolicy: Always
           envFrom:
             - configMapRef: { name: api-config }
             - secretRef: { name: api-secrets }
