--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint --no-error-on-unmatched-pattern"
   },
   "dependencies": {
+    "@prisma/client": "^5.17.0",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.539.0",
     "next": "14.2.5",
