--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -15,24 +15,25 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.4.2",
+    "@noble/hashes": "^1.8.0",
+    "@prisma/client": "^5.17.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "@prisma/client": "^5.17.0",
-    "@nestjs/swagger": "^7.4.2",
-    "swagger-ui-express": "^5.0.1",
-    "class-validator": "^0.14.1",
-    "class-transformer": "^0.5.1"
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
-    "prisma": "^5.17.0",
-    "ts-node": "^10.9.2",
     "@types/express": "^4.17.21",
-    "typescript": "^5.5.3",
+    "@types/jest": "^29.5.5",
     "jest": "^29.7.0",
+    "prisma": "^5.17.0",
     "ts-jest": "^29.1.1",
-    "@types/jest": "^29.5.5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.3"
   }
 }
