--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,11 +4,14 @@
   "version": "0.0.2",
   "scripts": {
     "dev": "next dev -p 3000",
+    "prebuild": "npm run prisma:generate",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint --no-error-on-unmatched-pattern"
+    "lint": "next lint --no-error-on-unmatched-pattern",
+    "prisma:generate": "cd ../api && npx prisma generate && cp -r node_modules/.prisma ../web/node_modules/ && cp -r node_modules/@prisma ../web/node_modules/"
   },
   "dependencies": {
+    "@noble/hashes": "^1.8.0",
     "@prisma/client": "^5.17.0",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.539.0",
@@ -23,6 +26,7 @@
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.41",
+    "prisma": "^6.14.0",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.4"
   }
