--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -18,8 +18,10 @@
     "@nestjs/swagger": "^7.4.2",
     "@noble/hashes": "^1.8.0",
     "@prisma/client": "^5.17.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "jsonwebtoken": "^9.0.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.1"
