--- a/k8s/base/api-configmap.yaml
+++ b/k8s/base/api-configmap.yaml
@@ -7,3 +7,5 @@ data:
   NODE_ENV: "production"
   PORT: "3000"
   PUBLIC_BASE_URL: "https://staging.afterlight.example"
+  CORS_ALLOWED_ORIGINS: "https://app.afterlight.example"
+  JSON_BODY_LIMIT: "100kb"
