--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,7 +8,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint --no-error-on-unmatched-pattern",
-    "prisma:generate": "cd ../api && npx prisma generate && cp -r node_modules/.prisma ../web/node_modules/ && cp -r node_modules/@prisma ../web/node_modules/"
+    "prisma:generate": "cd ../api && npx prisma generate && cp -r node_modules/.prisma ../web/node_modules/ && cp -r node_modules/@prisma ../web/node_modules/",
+    "openapi": "openapi-typescript ../api/openapi.json -o src/api.ts"
   },
   "dependencies": {
     "@noble/hashes": "^1.8.0",
@@ -28,6 +29,7 @@
     "postcss": "^8.4.41",
     "prisma": "^6.14.0",
     "tailwindcss": "^3.4.10",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "openapi-typescript": "^6.5.4"
   }
 }
