--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -26,10 +26,10 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.20",
+    "openapi-typescript": "^6.5.4",
     "postcss": "^8.4.41",
     "prisma": "^6.14.0",
     "tailwindcss": "^3.4.10",
-    "typescript": "^5.5.4",
-    "openapi-typescript": "^6.5.4"
+    "typescript": "^5.5.4"
   }
 }
