--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -20,9 +20,11 @@
     "@noble/hashes": "^1.8.0",
     "@prisma/client": "^5.17.0",
     "@types/jsonwebtoken": "^9.0.10",
+    "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "jsonwebtoken": "^9.0.2",
+    "prisma": "^5.17.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.1",
@@ -34,8 +36,8 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.5",
+    "@types/bcryptjs": "^2.4.2",
     "jest": "^29.7.0",
-    "prisma": "^5.17.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.3"
