fix: build seed in verification workflow

--- a/.github/workflows/prisma-verify.yml
+++ b/.github/workflows/prisma-verify.yml
@@ -33,6 +33,8 @@ jobs:
           npx prisma validate
           npx prisma format --check
           npx prisma generate
+      - name: Build
+        run: npm run build
       - name: Migrate and seed
         run: |
           npx prisma migrate deploy
